220504 수 1531 - 셀렉트 옵션 커스텀 이벤트 추가 > HOTTEST

--- a/footer.html
+++ b/footer.html
@@ -52,8 +52,9 @@
               </div> -->
               <div class="sort-select-box">
                 <select name="sortModalList" id="sortModalList" class="sort-select">
-                  <option value="latest" selected>등록일</option>
+                  <option value="latest" selected>최신순</option>
                   <option value="title">제목</option>
+                  <option value="upload">등록일</option>
                   <option value="engagements">인게이지먼트</option>
                   <option value="views">조회수</option>
                   <option value="likes">좋아요수</option>
@@ -103,9 +104,9 @@
                     <li class="content-subs-item content-likes">2,788</li>
                     <li class="content-subs-item content-comments">17,158</li>
                     <li class="content-subs-item content-shares">370</li>
-                    <li class="content-subs-item content-icon"><a href="https://www.instagram.com/p/Caj5V0aFVmz/v"
-                        target="_blank"><img src="./src/img/icon/icon-link.svg" alt=""></a></li>
                   </ul>
+                  <p class="content-subs-item content-icon"><a href="https://www.instagram.com/p/Caj5V0aFVmz/v"
+                      target="_blank"><img src="./src/img/icon/icon-link.svg" alt=""></a></p>
                 </li>
                 <li class="content-item">
                   <p class="content-channel sns-insta"></p>
@@ -116,9 +117,9 @@
                     <li class="content-subs-item content-likes">2,788</li>
                     <li class="content-subs-item content-comments">17,158</li>
                     <li class="content-subs-item content-shares">370</li>
-                    <li class="content-subs-item content-icon"><a href="https://www.instagram.com/p/Caj5V0aFVmz/v"
-                        target="_blank"><img src="./src/img/icon/icon-link.svg" alt=""></a></li>
                   </ul>
+                  <p class="content-subs-item content-icon"><a href="https://www.instagram.com/p/Caj5V0aFVmz/v"
+                      target="_blank"><img src="./src/img/icon/icon-link.svg" alt=""></a></p>
                 </li>
                 <li class="content-item">
                   <p class="content-channel cafe-naver"></p>
@@ -131,9 +132,9 @@
                     <li class="content-subs-item content-likes">2,788</li>
                     <li class="content-subs-item content-comments">17,158</li>
                     <li class="content-subs-item content-shares">370</li>
-                    <li class="content-subs-item content-icon"><a href="https://www.instagram.com/p/Caj5V0aFVmz/v"
-                        target="_blank"><img src="./src/img/icon/icon-link.svg" alt=""></a></li>
                   </ul>
+                  <p class="content-subs-item content-icon"><a href="https://www.instagram.com/p/Caj5V0aFVmz/v"
+                      target="_blank"><img src="./src/img/icon/icon-link.svg" alt=""></a></p>
                 </li>
                 <li class="content-item">
                   <p class="content-channel sns-insta"></p>
@@ -146,9 +147,9 @@
                     <li class="content-subs-item content-likes">2,788</li>
                     <li class="content-subs-item content-comments">17,158</li>
                     <li class="content-subs-item content-shares">370</li>
-                    <li class="content-subs-item content-icon"><a href="https://www.instagram.com/p/Caj5V0aFVmz/v"
-                        target="_blank"><img src="./src/img/icon/icon-link.svg" alt=""></a></li>
                   </ul>
+                  <p class="content-subs-item content-icon"><a href="https://www.instagram.com/p/Caj5V0aFVmz/v"
+                      target="_blank"><img src="./src/img/icon/icon-link.svg" alt=""></a></p>
                 </li>
                 <li class="content-item">
                   <p class="content-channel sns-twitter"></p>
@@ -161,9 +162,9 @@
                     <li class="content-subs-item content-likes">2,788</li>
                     <li class="content-subs-item content-comments">17,158</li>
                     <li class="content-subs-item content-shares">370</li>
-                    <li class="content-subs-item content-icon"><a href="https://www.instagram.com/p/Caj5V0aFVmz/v"
-                        target="_blank"><img src="./src/img/icon/icon-link.svg" alt=""></a></li>
                   </ul>
+                  <p class="content-subs-item content-icon"><a href="https://www.instagram.com/p/Caj5V0aFVmz/v"
+                      target="_blank"><img src="./src/img/icon/icon-link.svg" alt=""></a></p>
                 </li>
                 <li class="content-item">
                   <p class="content-channel sns-twitter"></p>
@@ -176,9 +177,9 @@
                     <li class="content-subs-item content-likes">2,788</li>
                     <li class="content-subs-item content-comments">17,158</li>
                     <li class="content-subs-item content-shares">370</li>
-                    <li class="content-subs-item content-icon"><a href="https://www.instagram.com/p/Caj5V0aFVmz/v"
-                        target="_blank"><img src="./src/img/icon/icon-link.svg" alt=""></a></li>
                   </ul>
+                  <p class="content-subs-item content-icon"><a href="https://www.instagram.com/p/Caj5V0aFVmz/v"
+                      target="_blank"><img src="./src/img/icon/icon-link.svg" alt=""></a></p>
                 </li>
                 <li class="content-item">
                   <p class="content-channel blog-naver"></p>
@@ -191,9 +192,9 @@
                     <li class="content-subs-item content-likes">2,788</li>
                     <li class="content-subs-item content-comments">17,158</li>
                     <li class="content-subs-item content-shares">370</li>
-                    <li class="content-subs-item content-icon"><a href="https://www.instagram.com/p/Caj5V0aFVmz/v"
-                        target="_blank"><img src="./src/img/icon/icon-link.svg" alt=""></a></li>
                   </ul>
+                  <p class="content-subs-item content-icon"><a href="https://www.instagram.com/p/Caj5V0aFVmz/v"
+                      target="_blank"><img src="./src/img/icon/icon-link.svg" alt=""></a></p>
                 </li>
                 <li class="content-item">
                   <p class="content-channel blog-naver"></p>
@@ -206,9 +207,9 @@
                     <li class="content-subs-item content-likes">2,788</li>
                     <li class="content-subs-item content-comments">17,158</li>
                     <li class="content-subs-item content-shares">370</li>
-                    <li class="content-subs-item content-icon"><a href="https://www.instagram.com/p/Caj5V0aFVmz/v"
-                        target="_blank"><img src="./src/img/icon/icon-link.svg" alt=""></a></li>
                   </ul>
+                  <p class="content-subs-item content-icon"><a href="https://www.instagram.com/p/Caj5V0aFVmz/v"
+                      target="_blank"><img src="./src/img/icon/icon-link.svg" alt=""></a></p>
                 </li>
                 <li class="content-item">
                   <p class="content-channel blog-naver"></p>
@@ -221,9 +222,9 @@
                     <li class="content-subs-item content-likes">2,788</li>
                     <li class="content-subs-item content-comments">17,158</li>
                     <li class="content-subs-item content-shares">370</li>
-                    <li class="content-subs-item content-icon"><a href="https://www.instagram.com/p/Caj5V0aFVmz/v"
-                        target="_blank"><img src="./src/img/icon/icon-link.svg" alt=""></a></li>
                   </ul>
+                  <p class="content-subs-item content-icon"><a href="https://www.instagram.com/p/Caj5V0aFVmz/v"
+                      target="_blank"><img src="./src/img/icon/icon-link.svg" alt=""></a></p>
                 </li>
                 <li class="content-item">
                   <p class="content-channel sns-insta"></p>
@@ -236,9 +237,9 @@
                     <li class="content-subs-item content-likes">2,788</li>
                     <li class="content-subs-item content-comments">17,158</li>
                     <li class="content-subs-item content-shares">370</li>
-                    <li class="content-subs-item content-icon"><a href="https://www.instagram.com/p/Caj5V0aFVmz/v"
-                        target="_blank"><img src="./src/img/icon/icon-link.svg" alt=""></a></li>
                   </ul>
+                  <p class="content-subs-item content-icon"><a href="https://www.instagram.com/p/Caj5V0aFVmz/v"
+                      target="_blank"><img src="./src/img/icon/icon-link.svg" alt=""></a></p>
                 </li>
                 <li class="content-item">
                   <p class="content-channel sns-twitter"></p>
@@ -251,9 +252,9 @@
                     <li class="content-subs-item content-likes">2,788</li>
                     <li class="content-subs-item content-comments">17,158</li>
                     <li class="content-subs-item content-shares">370</li>
-                    <li class="content-subs-item content-icon"><a href="https://www.instagram.com/p/Caj5V0aFVmz/v"
-                        target="_blank"><img src="./src/img/icon/icon-link.svg" alt=""></a></li>
                   </ul>
+                  <p class="content-subs-item content-icon"><a href="https://www.instagram.com/p/Caj5V0aFVmz/v"
+                      target="_blank"><img src="./src/img/icon/icon-link.svg" alt=""></a></p>
                 </li>
                 <li class="content-item">
                   <p class="content-channel sns-insta"></p>
@@ -266,9 +267,9 @@
                     <li class="content-subs-item content-likes">2,788</li>
                     <li class="content-subs-item content-comments">17,158</li>
                     <li class="content-subs-item content-shares">370</li>
-                    <li class="content-subs-item content-icon"><a href="https://www.instagram.com/p/Caj5V0aFVmz/v"
-                        target="_blank"><img src="./src/img/icon/icon-link.svg" alt=""></a></li>
                   </ul>
+                  <p class="content-subs-item content-icon"><a href="https://www.instagram.com/p/Caj5V0aFVmz/v"
+                      target="_blank"><img src="./src/img/icon/icon-link.svg" alt=""></a></p>
                 </li>
                 <li class="content-item">
                   <p class="content-channel sns-insta"></p>
@@ -281,9 +282,9 @@
                     <li class="content-subs-item content-likes">2,788</li>
                     <li class="content-subs-item content-comments">17,158</li>
                     <li class="content-subs-item content-shares">370</li>
-                    <li class="content-subs-item content-icon"><a href="https://www.instagram.com/p/Caj5V0aFVmz/v"
-                        target="_blank"><img src="./src/img/icon/icon-link.svg" alt=""></a></li>
                   </ul>
+                  <p class="content-subs-item content-icon"><a href="https://www.instagram.com/p/Caj5V0aFVmz/v"
+                      target="_blank"><img src="./src/img/icon/icon-link.svg" alt=""></a></p>
                 </li>
                 <li class="content-item">
                   <p class="content-channel sns-insta"></p>
@@ -296,9 +297,9 @@
                     <li class="content-subs-item content-likes">2,788</li>
                     <li class="content-subs-item content-comments">17,158</li>
                     <li class="content-subs-item content-shares">370</li>
-                    <li class="content-subs-item content-icon"><a href="https://www.instagram.com/p/Caj5V0aFVmz/v"
-                        target="_blank"><img src="./src/img/icon/icon-link.svg" alt=""></a></li>
                   </ul>
+                  <p class="content-subs-item content-icon"><a href="https://www.instagram.com/p/Caj5V0aFVmz/v"
+                      target="_blank"><img src="./src/img/icon/icon-link.svg" alt=""></a></p>
                 </li>
               </ul>
             </div>
