--- a/hottest.html
+++ b/hottest.html
@@ -281,6 +281,20 @@
                 <h3 class="add-icon">SNS TOP 10</h3>
               </div>
               <div class="article-content">
+                <div class="article-content-top">
+                  <div class="cont-select-box">
+                    <div class="cont-select">
+                      <button class="select-label">SNS 전체</button>
+                      <ul class="option-list">
+                        <li class="option-item">SNS 전체</li>
+                        <li class="option-item">페이스북</li>
+                        <li class="option-item">인스타그램</li>
+                        <li class="option-item">트위터</li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+
                 <div class="article-hottest-wrap">
                   <ul class="hottest-list">
                     <li class="hottest-item item-title">
@@ -493,6 +507,31 @@
               </div>
               <div class="article-content">
                 <div class="article-content-top">
+                  <div class="cont-select-box">
+                    <div class="cont-select">
+                      <button class="select-label">전체</button>
+                      <ul class="option-list">
+                        <li class="option-item">네이버 카페</li>
+                        <li class="option-item">다음 카페</li>
+                        <li class="option-item">네이버 블로그</li>
+                        <li class="option-item">다음 블로그</li>
+                        <li class="option-item">티스토리</li>
+                        <li class="option-item">인스타그램</li>
+                        <li class="option-item">페이스북</li>
+                        <li class="option-item">유튜브</li>
+                        <li class="option-item">트위터</li>
+                        <li class="option-item">뽐뿌</li>
+                        <li class="option-item">MLB파크</li>
+                        <li class="option-item">클리앙</li>
+                        <li class="option-item">FM코리아</li>
+                        <li class="option-item">DC인사이드</li>
+                        <li class="option-item">루리웹</li>
+                        <li class="option-item">인벤</li>
+                        <li class="option-item">뉴스</li>
+                      </ul>
+                    </div>
+                  </div>
+
                   <div class="channel-select">
                     <label class="chkbox chkbox-sns">
                       <input type="checkbox" id="postTopSnsChk">
