--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
             </div>
 
             <div class="intro-login-option clearFix">
-              <p class="id-remember">
+              <!-- <p class="id-remember">
                 <input id="idRemember" type="checkbox">
                 <label for="idRemember">아이디 기억하기</label>
-              </p>
+              </p> -->
               <!-- <p class="find-user-info">
                 <a href="#">아이디/비밀번호 찾기</a>
               </p>
@@ -314,7 +314,8 @@
             <div class="article-inner">
               <div class="article-title">
                 <h3>유튜브 인기 동영상</h3>
-                <span class="title-more"><a href="#">더 보기</a></span>
+                <span class="title-more"><a href="https://www.youtube.com/feed/trending?bp=6gQJRkVleHBsb3Jl"
+                    target="_blank">더 보기</a></span>
               </div>
               <div class="article-content">
                 <div id="youtHotSwpContainer" class="article-list-wrap swiper-container">
@@ -383,7 +384,8 @@
             <div class="article-inner">
               <div class="article-title">
                 <h3>버즈메트릭스 뉴스레터</h3>
-                <span class="title-more"><a href="#">더 보기</a></span>
+                <span class="title-more"><a href="http://www.buzzmetrix.co.kr/wp/?page_id=73" target="_blank">더
+                    보기</a></span>
               </div>
               <div class="article-content">
                 <div id="buzzNewsSwpContainer" class="article-list-wrap swiper-container">
