--- a/now.html
+++ b/now.html
@@ -866,7 +866,7 @@
                     <ul class="method-list">
                       <li class="method-item now-on">Cloud</li>
                       <li class="method-item">Network</li>
-                      <li class="method-item">Table</li>
+                      <!-- <li class="method-item">Table</li> -->
                     </ul>
                   </div>
                 </div>
@@ -899,7 +899,7 @@
                         <select name="sortModalList" id="sortSntmRank" class="sort-select">
                           <option value="latest" selected>성향</option>
                           <option value="views">긍정</option>
-                          <option value="comments">중립</option>
+                          <!-- <option value="comments">중립</option>s -->
                           <option value="likes">부정</option>
                         </select>
                         <span class="icon-arrow"></span>
