220504 수 1614 - 컨텐츠 원문 모달 > 셀렉트 옵션 커스텀 교체 및 레이아웃 수정

--- a/footer.html
+++ b/footer.html
@@ -50,7 +50,24 @@
                   <li class="option-item">추천수순</li>
                 </ul>
               </div> -->
-              <div class="sort-select-box">
+
+              <div class="cont-select-box">
+                <div class="cont-select">
+                  <button class="modal-select-label">최신순</button>
+                  <ul class="option-list">
+                    <li class="option-item">최신순</li>
+                    <li class="option-item">제목</li>
+                    <li class="option-item">등록일</li>
+                    <li class="option-item">인게이지먼트</li>
+                    <li class="option-item">조회수</li>
+                    <li class="option-item">좋아요수</li>
+                    <li class="option-item">댓글수</li>
+                    <li class="option-item">공유수</li>
+                  </ul>
+                </div>
+              </div>
+
+              <!-- <div class="sort-select-box">
                 <select name="sortModalList" id="sortModalList" class="sort-select">
                   <option value="latest" selected>최신순</option>
                   <option value="title">제목</option>
@@ -62,7 +79,7 @@
                   <option value="share">공유수</option>
                 </select>
                 <span class="icon-arrow"></span>
-              </div>
+              </div> -->
               <div class="search-input">
                 <input type="text" id="searchOrigin" placeholder="검색어를 입력하세요">
                 <label for="searchOrigin" class="blind">검색어를 입력하세요</label>
