--- a/hottest.html
+++ b/hottest.html
@@ -279,9 +279,7 @@
             <div class="article-inner">
               <div class="article-title">
                 <h3 class="add-icon">SNS TOP 10</h3>
-              </div>
-              <div class="article-content">
-                <div class="article-content-top">
+                <div class="title-option-wrap">
                   <div class="cont-select-box">
                     <div class="cont-select">
                       <button class="select-label">SNS 전체</button>
@@ -294,7 +292,8 @@
                     </div>
                   </div>
                 </div>
-
+              </div>
+              <div class="article-content">
                 <div class="article-hottest-wrap">
                   <ul class="hottest-list">
                     <li class="hottest-item item-title">
@@ -504,9 +503,7 @@
             <div class="article-inner">
               <div class="article-title">
                 <h3 class="add-icon">POST TOP 10</h3>
-              </div>
-              <div class="article-content">
-                <div class="article-content-top">
+                <div class="title-option-wrap">
                   <div class="cont-select-box">
                     <div class="cont-select">
                       <button class="select-label">전체</button>
@@ -531,7 +528,10 @@
                       </ul>
                     </div>
                   </div>
-
+                </div>
+              </div>
+              <div class="article-content">
+                <!-- <div class="article-content-top">
                   <div class="channel-select">
                     <label class="chkbox chkbox-sns">
                       <input type="checkbox" id="postTopSnsChk">
@@ -559,7 +559,7 @@
                       <span class="chk-txt">NEWS</span>
                     </label>
                   </div>
-                </div>
+                </div> -->
 
                 <div class="article-hottest-wrap hottest-wide">
                   <ul class="hottest-list hottest-wide-list">
