220504 수 1655 - NOW > sentiment keyword > 셀렉트 옵션 수정 중

--- a/now.html
+++ b/now.html
@@ -895,15 +895,27 @@
                 <div class="article-rank-wrap">
                   <ul class="rank-list">
                     <li class="rank-item item-title">
-                      <p class="item-standing sort-select-box">
+                      <div class="item-standing sort-select-box">
+                        <div class="cont-select-box">
+                          <div class="cont-select">
+                            <button class="select-label">성향</button>
+                            <ul class="option-list">
+                              <li class="option-item">성향</li>
+                              <li class="option-item">긍정</li>
+                              <li class="option-item">부정</li>
+                            </ul>
+                          </div>
+                        </div>
+
+                      </div>
+                      <!-- <p class="item-standing sort-select-box">
                         <select name="sortModalList" id="sortSntmRank" class="sort-select">
                           <option value="latest" selected>성향</option>
                           <option value="views">긍정</option>
-                          <!-- <option value="comments">중립</option>s -->
                           <option value="likes">부정</option>
                         </select>
                         <span class="icon-arrow"></span>
-                      </p>
+                      </p> -->
                       <span class="item-keyword">단어</span>
                       <span class="item-num">건수</span>
                     </li>
