--- a/footer.html
+++ b/footer.html
@@ -34,7 +34,7 @@
     <!-- <div id="modalBg"></div> -->
 
     <!-- 컨텐츠 원문 리스트 모달 -->
-    <div id="showAllModal">
+    <div id="showAllModal" class="modal-section">
       <div class="modalBg"></div>
       <div class="show-all-wrap">
         <div class="show-all-inner">
@@ -318,7 +318,7 @@
     </div>
 
     <!-- 원문 내용 모달 -->
-    <div id="showOriginModal">
+    <div id="showOriginModal" class="modal-section">
       <div class="modalBg"></div>
       <div class="show-origin-wrap">
         <div class="show-origin-inner">
@@ -380,7 +380,6 @@
       </div>
     </div>
 
-
     <!-- 로그인 모달 -->
     <div id="loginModal" class="modal-section">
       <div class="modalBg"></div>
@@ -415,6 +414,15 @@
               <span class='go-find-pw'><a href="./find_pw.html">비밀번호 찾기</a></span>
             </div> -->
           </div>
+        </div>
+      </div>
+    </div>
+
+    <div id="srchSetModal" class="modal-section">
+      <div class="modalBg"></div>
+      <div class="search-setting-wrap">
+        <div class="search-setting-inner">
+          검색 설정 모달
         </div>
       </div>
     </div>
