--- a/footer.html
+++ b/footer.html
@@ -25,7 +25,7 @@
 
   <div id="loading">
     <div class="loading-bg">
-      <p class="loading-title">키워드에 대한 정보를 수집 중입니다.</p>
+      <p class="loading-title">키워드에 대한 정보를 수집하고 있습니다.</p>
     </div>
     <div class="dots-flow"></div>
   </div>
