220506 금 1643 - userPreset > 검색설정관리 제작 중

--- a/userPreset.html
+++ b/userPreset.html
@@ -50,6 +50,102 @@
         </div>
       </section>
 
+      <section class="content-section">
+        <div class="section-inner">
+          <article class="content-article article-user-setting">
+            <div class="article-inner">
+              <div class="article-title">
+                <!-- <span class="user-page-profile"></span> -->
+                <h3 class="">검색 설정 관리</h3>
+              </div>
+              <div class="article-content">
+                <div class="usr-set-container">
+                  <div class="usr-set-wrap">
+                    <ul class="usr-set-list">
+                      <li class="usr-set-item">
+                        <div class="set-btn-wrap">
+                          <p class="modify-btn">수정</p>
+                          <p class="save-btn">저장</p>
+                          <p class="del-btn">삭제</p>
+                        </div>
+                        <ul class="set-info-wrap">
+                          <li class="set-info-item info-search-word">
+                            <div class="info-item-title">검색어</div>
+                            <div class="info-label-wrap">
+                              <label class="info-label label-search-word">
+                                <input type="text" class="info-input input-search-word" placeholder="검색어">
+                                <span class="search-word-value">베개</span>
+                              </label>
+                            </div>
+                          </li>
+                          <li class="set-info-item info-optional-word info-include-word">
+                            <div class="info-item-title">포함어</div>
+                            <div class="included-word-wrap">
+                              <p class="included-word"><span>담요</span></p>
+                              <p class="included-word"><span>포근한</span></p>
+                              <p class="add-btn"><span>+</span></p>
+                            </div>
+                            <div class="add-word-wrap active">
+                              <div class="add-option">
+                                <label class="add-option-label add-or-label">
+                                  <input type="radio" name="addOption" value="include-or">
+                                  <span class="label-txt">또는</span>
+                                </label>
+                                <label class="add-option-label add-and-label">
+                                  <input type="radio" name="addOption" value="include-and">
+                                  <span class="label-txt">그리고</span>
+                                </label>
+                              </div>
+                              <div class="add-input">
+                                <input type="text" placeholder="포함어를 입력하세요.">
+                                <p class="add-btn">+</p>
+                              </div>
+                            </div>
+                          </li>
+                          <li class="set-info-item info-optional-word info-exclude-word">
+                            <div class="info-item-title">제외어</div>
+                            <div class="excluded-word-wrap">
+                              <p class="excluded-word"><span>나라</span></p>
+                              <p class="excluded-word"><span>조금긴제외어1</span></p>
+                              <p class="excluded-word"><span>세번째제외어</span></p>
+                              <p class="add-btn blind"><span>+</span></p>
+                            </div>
+                            <div class="add-word-wrap">
+                              <div class="add-option">
+                                <label class="add-option-label add-or-label">
+                                  <input type="radio" name="addOption" value="except-or">
+                                  <span class="label-txt">또는</span>
+                                </label>
+                                <label class="add-option-label add-and-label">
+                                  <input type="radio" name="addOption" value="except-and">
+                                  <span class="label-txt">그리고</span>
+                                </label>
+                              </div>
+                              <div class="add-input">
+                                <input type="text" placeholder="포함어를 입력하세요.">
+                                <p class="add-btn">+</p>
+                              </div>
+                            </div>
+                          </li>
+                          <li class="set-info-item info-period">
+                            <div class="info-item-title">검색기간</div>
+
+                          </li>
+                          <li class="set-info-item info-channel">
+                            <div class="info-item-title">대상 채널</div>
+
+                          </li>
+                        </ul>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </article>
+        </div>
+      </section>
+
     </div>
 
     <div id="footer" class="contents-page">
