--- a/footer.html
+++ b/footer.html
@@ -19,10 +19,12 @@
 </footer>
 
 <aside>
+  <!-- go top 버튼 -->
   <div id="goTop">
     <p class="go-top-btn"><img src="./src/img/icon/icon-go-top.svg" alt="go top"></p>
   </div>
 
+  <!-- 로딩 애니메이션 >> layout.css -->
   <div id="loading">
     <div class="loading-bg">
       <p class="loading-title">키워드에 대한 정보를 수집하고 있습니다.</p>
@@ -31,7 +33,6 @@
   </div>
 
   <div id="modal">
-    <!-- <div id="modalBg"></div> -->
 
     <!-- 컨텐츠 원문 리스트 모달 -->
     <div id="showAllModal" class="modal-section">
