--- a/userPreset.html
+++ b/userPreset.html
@@ -68,6 +68,7 @@
                         <!-- but! input checkbox는 onclick="return false"로 대체 -->
                         <div class="set-btn-wrap">
                           <p class="modify-btn">수정</p>
+                          <p class="search-btn">검색</p>
                           <p class="save-btn">저장</p>
                           <p class="del-btn">삭제</p>
                           <p class="cancel-btn">취소</p>
@@ -331,6 +332,7 @@
                         <!-- but! input checkbox는 onclick="return false"로 대체 -->
                         <div class="set-btn-wrap">
                           <p class="modify-btn">수정</p>
+                          <p class="search-btn">검색</p>
                           <p class="save-btn">저장</p>
                           <p class="del-btn">삭제</p>
                           <p class="cancel-btn">취소</p>
@@ -594,6 +596,7 @@
                         <!-- but! input checkbox는 onclick="return false"로 대체 -->
                         <div class="set-btn-wrap">
                           <p class="modify-btn">수정</p>
+                          <p class="search-btn">검색</p>
                           <p class="save-btn">저장</p>
                           <p class="del-btn">삭제</p>
                           <p class="cancel-btn">취소</p>
@@ -857,6 +860,7 @@
                         <!-- but! input checkbox는 onclick="return false"로 대체 -->
                         <div class="set-btn-wrap">
                           <p class="modify-btn">수정</p>
+                          <p class="search-btn">검색</p>
                           <p class="save-btn">저장</p>
                           <p class="del-btn">삭제</p>
                           <p class="cancel-btn">취소</p>
@@ -1120,6 +1124,7 @@
                         <!-- but! input checkbox는 onclick="return false"로 대체 -->
                         <div class="set-btn-wrap">
                           <p class="modify-btn">수정</p>
+                          <p class="search-btn">검색</p>
                           <p class="save-btn">저장</p>
                           <p class="del-btn">삭제</p>
                           <p class="cancel-btn">취소</p>
